--- a/src/design/_typography.scss
+++ b/src/design/_typography.scss
@@ -328,6 +328,7 @@ $typography-type-scale-contrast: (
 
 $typography-base-font-size: 1rem;
 $typography-base-line-height: $typography-base-font-size * 1.25;
+$typography-height: 100%;
 
 $typography-line-heights: (
   -1: $typography-base-line-height,
